# neukomart

./: .gitignore  README.md
.claude/: launch.json
app/: .env.example  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.node.json  vercel.json  vite.config.ts
app/api/: _decode.ts  _store.ts  market-debug.ts  market.ts  me-buy.ts  me-proxy.ts  og.tsx  tensor-buy.ts  webhook.ts
app/api/magiceden/: [...path].ts
app/src/: App.tsx  index.css  main.tsx  vite-env.d.ts
app/src/components/: Background.tsx  CartDrawer.tsx  Charts.tsx  Footer.tsx  Header.tsx  NFTCard.tsx  OfferCard.tsx  dialogs.tsx  ui.tsx
app/src/hooks/: useMarketActions.ts  useWalletData.ts
app/src/lib/: analytics.ts  art.ts  cart.ts  chain.ts  constants.ts  external-buy.ts  format.ts  head.ts  indexer.ts  listings.ts  live-market.ts  magiceden.ts  market-data.ts  merkle.ts  program.ts  seed.ts  store.ts  swaps.ts  theme.ts  traits.ts  tx.ts  types.ts
app/src/pages/: Activity.tsx  AssetDetail.tsx  Landing.tsx  Marketplace.tsx  Portfolio.tsx  SwapStudio.tsx
app/src/providers/: AppProviders.tsx
docs/: MAINNET_TEST_CHECKLIST.md
program/: Anchor.toml  package-lock.json  package.json  tsconfig.json
program/programs/neuko_market/: Cargo.toml
program/programs/neuko_market/src/: lib.rs
program/scripts/: debug-fetch.ts  experiment-remove.ts  fixup.ts  investigate.ts  probe-freeze.ts  setup-devnet.ts
program/tests/: _shared.ts  builder-parity.test.ts  neuko_market.test.ts  scenarios.test.ts  security.test.ts
