[package]
name = "neuko_market"
version = "0.1.0"
description = "Feeless, ecosystem-locked marketplace for the G*BOY (NEUKO) ecosystem — Badges, Harmies & $GBOY"
edition = "2021"
license = "MIT"

[lib]
crate-type = ["cdylib", "lib"]
name = "neuko_market"

[features]
default = []
# Swaps the ecosystem allow-list to throwaway devnet addresses for integration
# testing. NEVER enable for a mainnet build.
devnet = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = "0.32.1"
anchor-spl = "0.32.1"
mpl-core = "0.11.2"
solana-sha256-hasher = "2.3.0"
